# plainmouth

./: .gitignore  Makefile.in  README.md  autogen.sh  config.h.in  configure.ac
.github/workflows/: ci.yml
Documentation/: architecture.md  ipc-protocol.md  plainmouthd-commands.md
contrib/: splash.sh  test-meter.sh  test-msgbox.sh
src/: dump.c  helpers.h  ipc.c  ipc.h  macros.h  plainmouth.c  plainmouthd.c  plugin.c  plugin.h  request.c  request.h  warray.c  warray.h  widget.c  widget.h  widget_border.c  widget_button.c  widget_checkbox.c  widget_hbox.c  widget_hscroll.c  widget_input.c  widget_label.c  widget_list_vbox.c  widget_message.c  widget_meter.c  widget_pad_box.c  widget_pad_vbox.c  widget_scroll_vbox.c  widget_select.c  widget_select_opt.c  widget_spinbox.c  widget_textview.c  widget_tooltip.c  widget_vbox.c  widget_vscroll.c  widget_window.c
src/plugins/: askpass-main.c  checklist-main.c  form-main.c  meter-main.c  msgbox-main.c  (+3 more)
tests/: e2e-checklist.sh  e2e-form-scroll.sh  e2e-form.sh  e2e-meter.sh  e2e-msg-scrollbar.sh  e2e-msgbox.sh  e2e-password-tooltip.sh  e2e-password.sh  e2e-radiolist.sh  e2e-timebox.sh  expected-e2e-checklist  expected-e2e-form  expected-e2e-form-scroll  expected-e2e-meter  expected-e2e-msg-scrollbar  expected-e2e-msgbox  expected-e2e-password  expected-e2e-password-tooltip  expected-e2e-radiolist  expected-e2e-timebox  init-test  plainmouthd.sh  test-checklist.sh  test-form.sh  test-meter.sh  test-msg-scrollbar.sh  test-msgbox.sh  test-password-tooltip.sh  test-password.sh  test-radiolist.sh  test-timebox.sh  valgrind.supp
(+16 files in other folders)
